clusters/sirius/infra/kubernetes-dashboard/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboardext
  namespace: kubernetes-dashboard
spec:
  type: ExternalName
  externalName: ak-outpost-dashboard.authentik.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-outer
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboardext
                port:
                  number: 9000
